src/ui/snapshots/gitt__ui__tests__empty_state_snapshot.snap
---
source: src/ui/mod.rs
expression: "render_to_string(&s, 80, 8)"
---
 main (HEAD)    origin/main
Search:   (0 matches)
No commits
┌ai summary────────────────────────────────────────────────────────────────────┐
│press s for an AI summary                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · Tab preview · s summary · ←/→ view · Enter · R fetch · q quit
