src/ui/snapshots/gitt__ui__tests__loading_state_snapshot.snap
---
source: src/ui/mod.rs
expression: "render_to_string(&s, 80, 8)"
---
 main (HEAD)    origin/main
Search:   (0 matches)
Loading commits…




j/k · /search · Tab preview · @ summary · s expand · ←/→ view · Enter · R fetch
