src/ui/snapshots/gitt__ui__tests__log_05_filtered_snapshot.snap
---
source: src/ui/mod.rs
expression: "render_to_string(&s, 80, 12)"
---
 feature (HEAD)    origin/main
Search: parser█  (1 matches)
ccccccc 2 weeks ago   Cy               refactor parser (v1.0)




┌ai summary────────────────────────────────────────────────────────────────────┐
│press s for an AI summary                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · Tab preview · s summary · ←/→ view · Enter · R fetch · q quit
