src/ui/snapshots/gitt__ui__tests__log_07_origin_view_header_snapshot.snap
---
source: src/ui/mod.rs
expression: "render_to_string(&s, 80, 12)"
---
 feature (HEAD)    origin/main
Search:   (1 matches)
  eeeeeee 1 hour ago    Cy               origin tip (origin/main)




┌ai summary────────────────────────────────────────────────────────────────────┐
│press @ for an AI summary                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · Tab preview · @ summary · s expand · ←/→ view · Enter · R fetch
