src/ui/snapshots/gitt__ui__tests__log_11_menu_snapshot.snap
---
source: src/ui/mod.rs
expression: "render_to_string(&s, 80, 12)"
---
 feature (HEAD)    origin/main
Search:   (3 matches)
  aaaaaaa 3 days ago    Ada Lovelace     add fuzzy search (HEAD, feature)
  bbbbbbb 5 days ago    B┌ aaaaaaa add fuzzy search ──┐
  ccccccc 2 weeks ago   C│ Open in GitHub             │r
                         │ Open Pull Request          │
                         │ Copy SHA                   │
┌ai summary──────────────│ Checkout                   │────────────────────────┐
│press @ for an AI summar│ Copy revert command        │                        │
│                        └────────────────────────────┘                        │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · Tab preview · @ summary · s expand · ←/→ view · Enter · R fetch
