src/ui/snapshots/gitt__ui__tests__narrow_width_snapshot.snap
---
source: src/ui/mod.rs
expression: "render_to_string(&s, 40, 10)"
---
 feature (HEAD)    origin/main
Search:   (3 matches)
  aaaaaaa 3 days ago    Ada Lovelace
  bbbbbbb 5 days ago    Bo
  ccccccc 2 weeks ago   Cy
┌ai summary────────────────────────────┐
│press s for an AI summary             │
│                                      │
└──────────────────────────────────────┘
j/k · /search · Tab preview · s summary
