src/ui/snapshots/gitt__ui__tests__sum_04_summary_streaming_snapshot.snap
---
source: src/ui/mod.rs
expression: "render_to_string(&s, 80, 12)"
---
 feature (HEAD)    origin/main
Search:   (3 matches)
  aaaaaaa 3 days ago    Ada Lovelace     add fuzzy search (HEAD, feature)
  bbbbbbb 5 days ago    Bo               fix flaky test
  ccccccc 2 weeks ago   Cy               refactor parser (v1.0)


┌ai summary────────────────────────────────────────────────────────────────────┐
│Adds an in-process fuzzy▌                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · Tab preview · @ summary · s expand · ←/→ view · Enter · R fetch
