src/ui/snapshots/gitt__ui__tests__sum_06_summary_code_spans_snapshot.snap
---
source: src/ui/mod.rs
expression: out
---
 feature (HEAD)    origin/main
Search:   (3 matches)
✦ aaaaaaa 3 days ago    Ada Lovelace     add fuzzy search (HEAD, feature)
  bbbbbbb 5 days ago    Bo               fix flaky test
  ccccccc 2 weeks ago   Cy               refactor parser (v1.0)


┌ai summary────────────────────────────────────────────────────────────────────┐
│Bumps sled-playwright from 1.295.0 to 1.307.0 in package.json.                │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · Tab preview · @ summary · s expand · ←/→ view · Enter · R fetch
